Metodos de la clase Grafo Dirigido agregados